--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>List of vets</title>
 </head>
 <body>
 
-    <h1 th:text="'Index page'">Index Page</h1>
+    <h1 th:text="'List of vets'">List of vets</h1>
 
 </body>
 </html>
